Learning input addition

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,5 +12,10 @@
       <label for="language">Language:</label>
       <input type="text" id="language" name="language">
       <br><br>
+      <label for="code">Code (if not recognized):</label>
+      <textarea id="code" name="code"></textarea>
+      <br><br>
       <input type="submit" value="Submit">
     </form>
+  </body>
+</html>
